@@ -82,11 +82,11 @@
 			 ((stringp x)
 			  (and (mode-info-search-info-files x) x))
 			 ((listp x)
-			  (car (mapcar (lambda (y)
-					 (and (stringp y)
-					      (mode-info-search-info-files y)
-					      y))
-				       x)))))
+			  (catch 'found-title
+			    (dolist (y x)
+			      (and (stringp y)
+				   (mode-info-search-info-files y)
+				   (throw 'found-title y)))))))
 		      titles)))
   (setf (mode-info-entry-regexp class) entry-regexp)
   (setf (mode-info-entry-pos class) entry-pos)
